dh-python (2.20150719) UNRELEASED; urgency=medium

  * Update dist_fallback files
  * Converted to native package and bumped version number to 2.*

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 19 Jul 2015 13:57:42 +0200

dh-python (1.20150705-1) unstable; urgency=medium

  * Support requires.txt in PyPy packages.
  * Add unit tests for bugs fixed in this and the previous upload.

 -- Stefano Rivera <stefanor@debian.org>  Sun, 05 Jul 2015 19:09:24 -0700

dh-python (1.20150628-1) unstable; urgency=medium

  * Fix path handling when --ext-dest-dir is used. Some characters were being
    stripped from the beginning of the path.
  * Re-apply Multi-Arch change.
  * Remove XS-Testsuite control field, no longer necessary.
  * Sort namespace files, for reproducibility. Thanks to Chris Lamb for the
    patch. (closes: 777134)

 -- Stefano Rivera <stefanor@debian.org>  Sun, 28 Jun 2015 18:43:31 -0700

dh-python (1.20141111-2) unstable; urgency=medium

  * Remove Multi-Arch change from previous upload (not accepted for Jessie by
    release managers)

 -- Piotr Ożarowski <piotr@debian.org>  Sat, 15 Nov 2014 12:48:23 +0100

dh-python (1.20141111-1) unstable; urgency=medium

  * Set dh-python's Multi-Arch to "foreign" (closes: 767339)
  * dist_fallback files now contain list of all packages that provide Egg
    metadata (i.e. not just packages that don't have sensible name)
  * dh_python* no longer guesses dependency from requires.txt files nor Requires
    fields. Dependencies are generated only if given requirement is available
    in dist_fallback file (generated at dh-python's build time) or if it's
    available at build time (hint: Build-Depends)

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 11 Nov 2014 21:23:20 +0100

dh-python (1.20141026-1) unstable; urgency=medium

  [ Stefano Rivera ]
  * Update supported (and default) PyPy version to 2.4.

  [ Piotr Ożarowski ]
  * Remove "-p " from autoscripts if --compile-all option is set