@@ -2,6 +2,7 @@ dh-python (2.20150719) UNRELEASED; urgency=medium
 
   * Update dist_fallback files
   * Converted to native package and bumped version number to 2.*
+  * dh_python{2,3}: remove empty directories (closes: 761028)
 
  -- Piotr Ożarowski <piotr@debian.org>  Sun, 19 Jul 2015 13:57:42 +0200
 
